# drugget_staff

./: .gitignore
数字员工drugget/: .env.example  .gitignore  AGENTS.md  FILE_TREE.md  README.md  alembic.ini  build_knowledge_base.py  build_test_knowledge_base.py  docker-compose.yml  evidence  pyproject.toml  代码审计修复建议.md  首轮京东淘宝系重点药房候选清单.md
数字员工drugget/7.14抓取结果/: smoke_test_results_fixed.json  smoke_test_stores.json  smoke_test_targets.json
数字员工drugget/collectors/: export_fixture_run_csv.py  run_fixture_live_smoke.py  run_taobao_store_closed_loop.py  run_yaoshibang_closed_loop.py  test_workbench.py
数字员工drugget/migrations/: env.py
数字员工drugget/scripts/: build_knowledge_base.py  build_test_knowledge_base.py  control_price_coverage.py  normalize_confirmed_prices.py  stage2a_control_price_gap_report.py
数字员工drugget/tests/: test_agent_review_flow.py  test_agent_review_replay.py  test_agent_validator.py  test_api.py  test_business_export.py  test_codex_review.py  test_collector.py  test_comprehensive.py  test_config.py  test_control_price_coverage.py  test_control_rule_workflow.py  test_data_quality.py  test_data_quality_integration.py  test_evidence.py  test_fixture_runner.py  test_knowledge_base_builders.py  test_observability.py  test_orchestrator.py  test_price_decisions.py  test_pricing.py  test_replay.py  test_review_factory.py  test_review_orchestrator_wiring.py  test_review_policy.py  test_routing.py  test_run_fixture.py  test_search.py  test_sku_evidence.py  test_stage2a_control_price_data.py  test_store_planning.py  test_test_runner.py
(+279 files in other folders)
